--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babelify": "^7.3.0",
+    "http-server": "^0.9.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "watchify": "^3.7.0"
