--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "PORT=4567 http-server example & npm run watch:example & wait",
     "watch:example": "watchify -d -v -t babelify example/main.js -o example/bundle.js",
     "build": "mkdir -p dist && babel src -d dist",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "LOGGER_SILENT=1 mocha --compilers js:babel-register -r should -r babel-polyfill -r src/utils/setup-jsdom -R ${REPORTER-dot} 'src/*.spec.js'",
+    "test:watch": "REPORTERi=min npm run test -- -w",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -23,6 +24,13 @@
     "json"
   ],
   "author": "ruffle1986",
+  "contributors": [
+    {
+      "name": "Csanad Beres",
+      "email": "csb@purposeindustries.co",
+      "url": "https://github.com/Xronophobe"
+    }
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/purposeindustries/react-key-value/issues"
@@ -35,8 +43,10 @@
     "babel-preset-stage-2": "^6.18.0",
     "babelify": "^7.3.0",
     "http-server": "^0.9.0",
+    "mocha": "^3.2.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "should": "^11.1.1",
     "watchify": "^3.7.0"
   }
 }
