--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "PORT=4567 http-server example & npm run watch:example & wait",
     "watch:example": "watchify -d -v -t babelify example/main.js -o example/bundle.js",
     "build": "mkdir -p dist && babel src -d dist",
-    "test": "LOGGER_SILENT=1 mocha --compilers js:babel-register -r should -r babel-polyfill -r src/utils/setup-jsdom -R ${REPORTER-dot} 'src/*.spec.js'",
+    "test": "LOGGER_SILENT=1 mocha --compilers js:babel-register -r should -r src/utils/setup-jsdom -R ${REPORTER-dot} 'src/*.spec.js'",
     "test:watch": "REPORTER=min npm run test -- -w",
     "prepublish": "npm run build"
   },
@@ -41,8 +41,10 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
+    "babel-register": "^6.18.0",
     "babelify": "^7.3.0",
     "http-server": "^0.9.0",
+    "jsdom": "^9.8.3",
     "mocha": "^3.2.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
