--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
     "babelify": "^7.3.0",
+    "enzyme": "^2.6.0",
     "http-server": "^0.9.0",
     "jsdom": "^9.8.3",
     "mocha": "^3.2.0",
