--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsdom": "^9.8.3",
     "mocha": "^3.2.0",
     "react": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
     "should": "^11.1.1",
     "watchify": "^3.7.0"
