--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "start": "PORT=4567 http-server example & npm run watch:example & wait",
     "watch:example": "watchify -d -v -t babelify example/main.js -o example/bundle.js",
     "build": "mkdir -p dist && babel src -d dist",
+    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- -r should 'src/*.spec.js'",
+    "coverage": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
     "test": "npm run js:lint && LOGGER_SILENT=1 mocha --compilers js:babel-register -r should -r src/utils/setup-jsdom -R ${REPORTER-dot} 'src/*.spec.js'",
     "test:watch": "REPORTER=min npm run test -- -w",
+    "test:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text mocha --compilers js:babel-register -r should -r src/utils/setup-jsdom 'src/*.spec.js'",
     "js:lint": "eslint -f ${ESLINT_FORMAT-stylish} src",
     "js:lint:watch": "esw src -w",
     "prepublish": "npm run build"
+  },
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false
   },
   "repository": {
     "type": "git",
@@ -41,11 +48,13 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-eslint": "6.0.4",
+    "babel-plugin-istanbul": "^3.0.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
     "babelify": "^7.3.0",
+    "coveralls": "^2.11.15",
     "enzyme": "^2.6.0",
     "eslint": "2.11.1",
     "eslint-config-pi": "^8.0.0",
@@ -53,8 +62,11 @@
     "eslint-plugin-react": "5.1.1",
     "eslint-watch": "~2.1.11",
     "http-server": "^0.9.0",
+    "istanbul": "^0.4.5",
     "jsdom": "^9.8.3",
     "mocha": "^3.2.0",
+    "mocha-lcov-reporter": "^1.2.0",
+    "nyc": "^10.0.0",
     "react": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
