chore: add coverage script, set back to master

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "PORT=4567 http-server example & npm run watch:example & wait",
     "watch:example": "watchify -d -v -t babelify example/main.js -o example/bundle.js",
     "build": "mkdir -p dist && babel src -d dist",
-    "cover": "istanbul cover ./node_modules/mocha/bin/_mocha -- -r should 'src/*.spec.js'",
-    "coverage": "npm run cover -- --report lcovonly && cat ./coverage/lcov.info | coveralls",
+    "coverage": "cat ./coverage/lcov.info | coveralls",
     "test": "npm run js:lint && npm run test:coverage && LOGGER_SILENT=1 mocha --compilers js:babel-register -r should -r src/utils/setup-jsdom -R ${REPORTER-dot} 'src/*.spec.js'",
     "test:watch": "REPORTER=min npm run test -- -w",
     "test:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text mocha --compilers js:babel-register -r should -r src/utils/setup-jsdom 'src/*.spec.js'",
