--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "mkdir -p dist && babel src -d dist",
     "coverage": "npm run test:coverage &&cat ./coverage/lcov.info | coveralls",
     "test": "npm run js:lint && LOGGER_SILENT=1 npm run testrunner -s",
-    "test:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text mocha --compilers js:babel-register -r should -r src/utils/setup-jsdom 'src/*.spec.js'",
+    "test:coverage": "NODE_ENV=test nyc --reporter=lcov --reporter=text npm run testrunner",
     "test:watch": "REPORTER=min npm run testrunner -- -w & wait",
     "testrunner": "mocha --compilers js:babel-register -r should -r src/utils/setup-jsdom -R ${REPORTER-dot} 'src/*.spec.js'",
     "js:lint": "eslint -f ${ESLINT_FORMAT-stylish} src",
